docs/tests/parser/edge_cases/invalid/ExtraCloseBraceInFunc.b
fn void test() {
    let int x = 0;
}}
